v1.0/README.md
# ESBM Benchmark v1.0 
https://w3id.org/esbm/1.0 

Last update: 2018-07-27

License: [ODC Attribution License (ODC-By)](https://opendatacommons.org/licenses/by/1-0/index.html)

ESBM (short for Entity Summarization BenchMark) is a benchmark for evaluating algorithms for entity summarization, aka entity summarizers.


# Download

* ESBM_benchmark: data of ESBM;
* Evaluator (jar, src): executable package and example code of the evaluator;
* summ_example: example of output files generated by an entity summarizer to be evaluated;
* runs: output files generated by selected entity summarizers.

# Data

The ESBM benchmark consists of 140 entities (see elist.txt) selected from [DBpedia](http://wiki.dbpedia.org/dbpedia-dataset-version-2015-10) and (LinkedMDB)[http://www.cs.toronto.edu/~oktie/linkedmdb/linkedmdb-latest-dump.zip]. For each entity, we provide its original description to be summarized and its gold-standard summaries created by crowdsourcing, all available as N-Triples documents.

* <code>desc</code>: entity description to be summarized;
* <code>top5</code>: six gold-standard summaries independently created by different people under <strong>k=5</strong> (i.e., 5 triples in each summary);
* <code>top10</code>: six gold-standard summaries independently created by different people under <strong>k=10</strong> (i.e., 10 triples in each summary).
The directory structure of these files is as follows.

<pre>|--ESBM_benchmark
	|-- dbpedia
		|-- 1
			|-- 1_desc.nt
			|-- 1_gold_top5_0.nt
			|-- 1_gold_top5_1.nt
			|-- ...
			|-- 1_gold_top5_5.nt
			|-- 1_gold_top10_0.nt
			|-- 1_gold_top10_1.nt
			|-- ...
			|-- 1_gold_top10_0.nt
		|-- 2
		|-- ...
		|-- 100
  	|-- lmdb
		|-- 101
			|-- 101_desc.nt
			|-- 101_gold_top5_0.nt
			|-- ...
		|-- 102
		|-- ...
		|-- 140
</pre>

# Evaluation

An evaluator written in Java is provided for evaluating your own entity summarizer based on the ESBM benchmark.

## Required Output Format

Summaries generated by your entity summarizer to be evaluated should be outputted also as N-Triples documents (see OutputExample.java in src). For each entity, provide the following output files generated by your entity summarizer.

* <code>top5</code>: summary generated by your entity summarizer under <strong>k=5</strong>;
* <code>top10</code>: summary generated by your entity summarizer under <strong>k=10</strong>;
* <code>rank</code>: ranked list of all the triples in the entity description. This file is optional. Provide it only if your entity summarizer is capable of generating a ranking of all the triples, so that our evaluator can report its MAP score.
The directory structure of these files should be as follows.

<pre>|--summ_example
	|-- dbpedia
		|-- 1
			|-- 1_top5.nt
			|-- 1_top10.nt
			|-- 1_rank.nt
		|-- 2
		|-- ...
		|-- 100
  	|-- lmdb
		|-- 101
			|-- 101_top5.nt
			|-- 101_top10.nt
			|-- 101_rank.nt
		|-- 102
		|-- ...
		|-- 140
</pre>

An example of output files is given in <code>summ_example</code>.

## Run the Evaluator

Unzip the benchmark data before running the evaluator.

The evaluator receives two arguments:

Path of the benchmark data, e.g. <code>/home/user/eval/ESBM_benchmark/</code>
Path of the output files generated by your entity summarizer, e.g. <code>/home/user/eval/summ_example/</code>
Run the evaluator (jar) using the following command (Java 8 is required):

<pre>$ java -jar esummeval_v1.0.jar /home/user/eval/ESBM_benchmark_v1.0/ /home/user/eval/summ_example/
</pre>

Output of the evaluator will look like:


<pre>******************************************
Evaluating with settings:
 benchmark directory: /home/user/eval/ESBM_benchmark/
 summarizer output directory: /home/user/eval/summ_example/

=================
Dataset: dbpedia
Results(dbpedia@top5):  F-measure=0.24999999999999997, MAP=0.34814702465126496
Results(dbpedia@top10): F-measure=0.46833333333333316, MAP=0.5317130048624622
=================
Dataset: lmdb
Results(lmdb@top5):     F-measure=0.20999999999999996, MAP=0.2433344674280165
Results(lmdb@top10):    F-measure=0.25958333333333333, MAP=0.336726885240028
=================
For all 140 entities:
Results(all@top5):      F-measure=0.23857142857142852, MAP=0.31820057973033683
Results(all@top10):     F-measure=0.40869047619047605, MAP=0.47600268497033815
</pre>

<p>Results for <code>dbpedia</code>, <code>lmdb</code> and <code>all</code> are averaged over 100, 40, and 140 entities, respectively, even if your entity summarizer does not provide summaries for all the entities.</p>

## Submit Your Results

Evaluation results for several selected entity summarizers are presented in Table 1 and Table 2. Their output files are also available (runs).

You are encouraged to submit the results of your entity summarizer by contacting us. We will add your results to the following tables. Your submission should contain:

* <code>Output files</code>: summaries generated by your entity summarizer;
* <code>Evaluation results</code>: evaluation results outputted by our evaluator;
* <code>Notes</code>: brief description of your entity summarizer (e.g., name of the summarizer, citation information, parameter settings).

<strong>Table 1. F-measure of selected entity summarizers under their best parameter settings</strong>

<table class="tablesorter" id="tb_fmeasure">
<thead>
<tr>
<th rowspan="2" data-sorter="false" class="header"></th>
<th colspan="2" class="nosort header">DBpedia</th>
<th colspan="2" class="nosort header">LinkedMDB</th>
<th colspan="2" class="nosort header">All</th>
</tr>
<tr>
<th id="dbp1" class="header">k=5</th>
<th id="dbp2" class="header">k=10</th>
<th id="lmdb1" class="header">k=5</th>
<th id="lmdb1" class="header">k=10</th>
<th id="all1" class="header">k=5</th>
<th id="all1" class="header">k=10</th>
</tr>
</thead>
<tbody><tr>
<td>RELIN [1]</td>
<td name="td1">0.250 <br><span>(λ=1.00)</span></td>
<td name="td2">0.468<br><span>(λ=1.00)</span></td>
<td name="td3">0.210<br><span>(λ=1.00)</span></td>
<td name="td4">0.260<br><span>(λ=1.00)</span></td>
<td name="td5">0.239<br><span>(λ=1.00)</span></td>
<td name="td6">0.409<br><span>(λ=1.00)</span></td>
</tr><tr>
<td>DIVERSUM [2]</td>
<td name="td1">0.260</td>
<td name="td2">0.522</td>
<td name="td3">0.222</td>
<td name="td4"><b>0.365</b></td>
<td name="td5">0.249</td>
<td name="td6"><b>0.477</b></td>
</tr>
<tr>
<td>CD [3]<br></td>
<td name="td1"><b>0.299</b><br><span>(γ=0.47)</span></td>
<td name="td2"><b>0.531</b><br><span>(γ=0.23)</span></td>
<td name="td3">0.215<br><span>(γ=1.00)</span></td>
<td name="td4">0.326<br><span>(γ=1.00)</span></td>
<td name="td5">0.267<br><span>(γ=0.52)</span></td>
<td name="td6">0.467<br><span>(γ=0.16)</span></td>
</tr>
<tr>
<td>FACES-E [4]</td>
<td name="td1">0.285</td>
<td name="td2">0.527</td>
<td name="td3"><b>0.252</b></td>
<td name="td4">0.348</td>
<td name="td5"><b>0.276</b></td>
<td name="td6">0.476</td>
</tr>

<tr>
<td>FACES [5]</td>
<td name="td1">0.272</td>
<td name="td2">0.439</td>
<td name="td3">0.160</td>
<td name="td4">0.259</td>
<td name="td5">0.240</td>
<td name="td6">0.388</td>
</tr>
<tr>
<td>LinkSUM [6]</td>
<td name="td1">0.290<br><span>(α=0.01)</span></td>
<td name="td2">0.498<br><span>(α=0.04)</span></td>
<td name="td3">0.117<br><span>(α=1.00)</span></td>
<td name="td4">0.255<br><span>(α=1.00)</span></td>
<td name="td5">0.240<br><span>(α=0.01)</span></td>
<td name="td6">0.428<br><span>(α=0.04)</span></td>
</tr>
</tbody></table>

<p><strong>Table 2. MAP of selected entity summarizers under their best parameter settings </strong></p>

<table class="tablesorter" id="tb_map">
<thead>
<tr>
<th rowspan="2" data-sorter="false" class="header"></th>
<th colspan="2" class="nosort header">DBpedia</th>
<th colspan="2" class="nosort header">LinkedMDB</th>
<th colspan="2" class="nosort header">All</th>
</tr>
<tr>
<th id="dbp1" class="header">k=5</th>
<th id="dbp2" class="header">k=10</th>
<th id="lmdb1" class="header">k=5</th>
<th id="lmdb1" class="header">k=10</th>
<th id="all1" class="header">k=5</th>
<th id="all1" class="header">k=10</th>
</tr>
</thead>
<tbody><tr>
<td>RELIN [1]</td>
<td name="td1">0.348<br><span>(λ=1.00)</span></td>
<td name="td2"><b>0.532</b><br><span>(λ=1.00)</span></td>
<td name="td3">0.243<br><span>(λ=1.00)</span></td>
<td name="td4">0.337<br><span>(λ=1.00)</span></td>
<td name="td5">0.318<br><span>(λ=1.00)</span></td>
<td name="td6">0.476<br><span>(λ=1.00)</span></td>
</tr><tr>
<td>DIVERSUM [2]</td>
<td name="td1">0.316</td>
<td name="td2">0.511</td>
<td name="td3"><b>0.269</b></td>
<td name="td4"><b>0.388</b></td>
<td name="td5">0.302</td>
<td name="td6">0.476</td>
</tr>
<tr>
<td>CD [3]<br></td>
<td name="td1">-</td>
<td name="td2">-</td>
<td name="td3">-</td>
<td name="td4">-</td>
<td name="td5">-</td>
<td name="td6">-</td>
</tr>
<tr>
<td>FACES-E [4]</td>
<td name="td1"><b>0.354</b></td>
<td name="td2">0.529</td>
<td name="td3">0.258</td>
<td name="td4">0.361</td>
<td name="td5"><b>0.326</b></td>
<td name="td6"><b>0.481</b></td>
</tr>

<tr>
<td>FACES [5]</td>
<td name="td1">0.247</td>
<td name="td2">0.386</td>
<td name="td3">0.140</td>
<td name="td4">0.261</td>
<td name="td5">0.216</td>
<td name="td6">0.351</td>
</tr>
<tr>
<td>LinkSUM [6]</td>
<td name="td1">0.246<br><span>(α=0.25)</span></td>
<td name="td2">0.386<br><span>(α=0.03)</span></td>
<td name="td3">0.120<br><span>(α=1.00)</span></td>
<td name="td4">0.254<br><span>(α=1.00)</span></td>
<td name="td5">0.210<br><span>(α=0.25)</span></td>
<td name="td6">0.348<br><span>(α=0.03)</span></td>
</tr>
</tbody></table>

# References

<p>
[1] Gong Cheng, Thanh Tran, Yuzhong Qu: RELIN: Relatedness and Informativeness-Based Centrality for Entity Summarization. International Semantic Web Conference (1) 2011: 114-129. <br>
[2] Marcin Sydow, Mariusz Pikula, Ralf Schenkel: The notion of diversity in graphical entity summarisation on semantic knowledge graphs. J. Intell. Inf. Syst. 41(2): 109-149 (2013).<br>
[3] Danyun Xu, Liang Zheng, Yuzhong Qu: CD at ENSEC 2016: Generating Characteristic and Diverse Entity Summaries. SumPre@ESWC 2016.<br>
[4] Kalpa Gunaratna, Krishnaprasad Thirunarayan, Amit P. Sheth, Gong Cheng: Gleaning Types for Literals in RDF Triples with Application to Entity Summarization. ESWC 2016: 85-100.<br>
[5] Kalpa Gunaratna, Krishnaprasad Thirunarayan, Amit P. Sheth: FACES: Diversity-Aware Entity Summarization Using Incremental Hierarchical Conceptual Clustering. AAAI 2015: 116-122.<br>
[6] Andreas Thalhammer, Nelia Lasierra, Achim Rettinger: LinkSUM: Using Link Analysis to Summarize Entity Data. ICWE 2016: 244-261.
</p>

# Contact
If you have any questions or suggestions, please feel free to contact [Qingxia Liu](http://ws.nju.edu.cn/people/qxliu) and [Gong Cheng](http://ws.nju.edu.cn/~gcheng). This work is also credited to Kalpa Gunaratna.
